<resources>
    <string name="app_name">GetMyPet</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

...
    <string name="register_error_mail">Mail address is mandatory</string>
    <string name="register_error_mail_valid">Not a valid mail address</string>
    <string name="error_password">Password is mandatory</string>
    <string name="register_error_password_match">Passwords do not match</string>
    <string name="register_error_phone">Not a valid phone number</string>

    <string name="home_title_missing">Missing Pets</string>
    <string name="home_title_found">Found Pets</string>

    <string name="title_missing">Missing</string>
    <string name="title_found">Found</string>
    <string name="search_missing">Region, Colour ,Type , Race</string>
    <string name="search_found">Region, Colour ,Type , Race</string>
    <string name="search_missing_title"> Search for pet name</string>
...
    <string name="sample_colour">Grey</string>
    <string name="last_seen">Last Seen</string>
    <string name="sample_seen">01.01.2000</string>
    <string name="image">Image:</string>
    <string name="select_image">SELECT IMAGE</string>

    <string name="lang_en">English</string>
    <string name="lang_ru">русский</string>

    <string name="login_error_username">User does not exist</string>
    <string name="login_error_password">Incorrect Password</string>

    <string name="action_user">User</string>

...
